<resources>
    <string name="app_name">BoxMovie</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="error_connect">Connect error</string>
    <string name="title_time">Time: </string>
    <string name="title_imdb">IMDb: </string>
    <string name="title_release_date">Release date: </string>
    <string name="title_release">Release: </string>
    <string name="title_detail">Detail</string>
    <string name="title_popular">Popular</string>
    <string name="title_toprated">Top Rated</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_upcoming">UpComing</string>
    <string name="title_overview">Overview</string>
    <string name="title_view_more">More</string>
    <string name="title_trailer">Trailer</string>
    <string name="title_recommandations">Recommandations</string>
    <string name="title_casts">Casts</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_search">Search</string>
    <string name="title_status">Status</string>
    <string name="title_vote">Vote</string>
    <string name="title_release_date_second">Release date</string>
    <string name="title_runtime">Runtime</string>
    <string name="title_budget">Budget</string>
    <string name="title_revenue">Revenue</string>
    <string name="title_add_to_wishlist">Add to wishlist</string>
    <string name="title_remove_to_wishlist">Remove to wishlist</string>
    <string name="title_production_companies">Production Companies</string>
    <string name="title_enter_movie">Enter movie title</string>
    <string name="action_retry">Retry</string>
    <string name="msg_add_to_wishlist">Adding to wishlist...</string>
    <string name="msg_remove_to_wishlist">Removing to wishlist...</string>
</resources>
