<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.framgia.nvmanh.boxmovie.screen.overview.OverviewViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_cod_gray"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:titleTextColor="@android:color/white"
            app:title="@{viewModel.observableMovie.title}"
            android:background="@color/color_tundora"
            />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_20"
                    android:text="@{viewModel.observableMovie.overview}"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_20"
                    app:layout_constraintTop_toBottomOf="@+id/text_description"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    app:setAdapter="@{viewModel.observableGenresAdapter}"
                    />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_1"
                    android:layout_margin="@dimen/dp_20"
                    android:background="@color/color_gray"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_genres" />

                <android.support.constraint.Guideline
                    android:id="@+id/guide_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/text_title_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/title_status"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/text_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@{viewModel.observableMovie.status}"
                    android:textColor="@color/color_gray_light"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_title_status" />

                <TextView
                    android:id="@+id/text_title_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/title_vote"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toRightOf="@+id/guide_line"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/text_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@{String.valueOf(viewModel.observableMovie.vote)}"
                    android:textColor="@color/color_gray_light"
                    app:layout_constraintLeft_toRightOf="@+id/guide_line"
                    app:layout_constraintTop_toBottomOf="@+id/text_title_vote" />

                <TextView
                    android:id="@+id/text_title_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/title_release_date_second"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_status" />

                <TextView
                    android:id="@+id/text_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:textColor="@color/color_gray_light"
                    android:text="@{viewModel.observableMovie.releaseDate}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_title_release_date" />

                <TextView
                    android:id="@+id/text_title_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/title_runtime"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toRightOf="@+id/guide_line"
                    app:layout_constraintTop_toBottomOf="@+id/text_vote" />

                <TextView
                    android:id="@+id/text_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@{String.valueOf(viewModel.observableMovie.runtime)}"
                    android:textColor="@color/color_gray_light"
                    app:layout_constraintLeft_toRightOf="@+id/guide_line"
                    app:layout_constraintTop_toBottomOf="@+id/text_title_release_date" />

                <TextView
                    android:id="@+id/text_title_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/title_budget"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_release_date" />

                <TextView
                    android:id="@+id/text_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@{String.valueOf(viewModel.observableMovie.budget)}"
                    android:textColor="@color/color_gray_light"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_title_budget" />

                <TextView
                    android:id="@+id/text_title_revenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/title_revenue"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toRightOf="@+id/guide_line"
                    app:layout_constraintTop_toBottomOf="@+id/text_release_date" />

                <TextView
                    android:id="@+id/text_revenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:text="@{String.valueOf(viewModel.observableMovie.revenue)}"
                    android:textColor="@color/color_gray_light"
                    app:layout_constraintLeft_toRightOf="@+id/guide_line"
                    app:layout_constraintTop_toBottomOf="@+id/text_title_revenue" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>
