<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.framgia.nvmanh.boxmovie.screen.home.HomeViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_cod_gray"
            >

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_200"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:setAdapterViewPager="@{viewModel.trendingMovieAdapter}" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/view_pager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:text="@string/action_retry"
                app:layout_constraintBottom_toBottomOf="@+id/view_pager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/view_pager"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@android:color/white"
                android:visibility="@{viewModel.isError ? View.VISIBLE : View.GONE}"
                android:onClick="@{() -> viewModel.retry()}"
                />

            <Button
                android:id="@+id/button_popular"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_140"
                android:layout_marginEnd="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintEnd_toStartOf="@+id/guide_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_pager"
                android:text="@string/title_popular"
                android:background="@drawable/action"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/sp_20"
                android:onClick="@{() -> viewModel.onClickPopular()}"
                />

            <Button
                android:id="@+id/button_top_rated"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_140"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_line"
                app:layout_constraintTop_toBottomOf="@+id/view_pager"
                android:text="@string/title_toprated"
                android:background="@drawable/action"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/sp_20"
                android:onClick="@{() -> viewModel.onClickTopRated()}"
                />

            <android.support.constraint.Guideline
                android:id="@+id/guide_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <Button
                android:id="@+id/button_now_playing"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_140"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_popular"
                android:text="@string/title_now_playing"
                android:background="@drawable/action"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/sp_20"
                android:onClick="@{() -> viewModel.onClickNowPlaying()}"
                />

            <Button
                android:id="@+id/button_upcoming"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_140"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_now_playing"
                android:text="@string/title_coming"
                android:background="@drawable/action"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/sp_20"
                android:onClick="@{() -> viewModel.onClickUpComing()}"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
